--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ matrix:
     include:
         -   os: linux
             jdk: oraclejdk8
-        -   os: osx
-            osx_image: xcode10.3
+       #-   os: osx
+       #     osx_image: xcode10.3
 script: mvn verify -DskipITs -DskipSign -B
 install: true
 notifications:
